test/invalid/baseline/special-omittable.txt
Syntax error at line 6 in special-omittable.widl, since `interface Dictionary`:
  omittable getter float getProperty(DOMString
            ^ Invalid operation
